--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ActivityTest</string>
     <string name="button_1">Button 1</string>
     <string name="button_2">Button 2</string>
+    <string name="button_3">Button 3</string>
 </resources>
